[gd_scene load_steps=11 format=3 uid="uid://ig4tsg37y5v3"]

[ext_resource type="Script" path="res://Game/start.gd" id="1_28fhy"]
[ext_resource type="Texture2D" uid="uid://is3uqul1r0vp" path="res://Art/BG_Start.png" id="2_f4ng0"]
[ext_resource type="Texture2D" uid="uid://bk5g76p7g75ui" path="res://Art/Title_DisasterSim.png" id="3_title"]
[ext_resource type="Texture2D" uid="uid://v1usvslel8cr" path="res://Art/Button_Play.png" id="4_button"]
[ext_resource type="AudioStream" uid="uid://cftllnb52c88v" path="res://Sounds/start_bgm.mp3" id="5_bgm"]
[ext_resource type="Texture2D" uid="uid://cfmf3w886rnm" path="res://Art/Button_Quit.png" id="5_quit"]
[ext_resource type="AudioStream" uid="uid://bpncc7ayaros0" path="res://Sounds/button_click_sfx.wav" id="6_click"]
[ext_resource type="Script" path="res://Game/sound_toggle.gd" id="8_3q0wd"]

[sub_resource type="Animation" id="Animation_float"]
resource_name = "title_float"
length = 4.0
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Title:position")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 2, 4),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Vector2(1513, 643), Vector2(1513, 623), Vector2(1513, 643)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_start"]
_data = {
"title_float": SubResource("Animation_float")
}

[node name="Start" type="Node2D"]
script = ExtResource("1_28fhy")

[node name="Background" type="TextureRect" parent="."]
offset_right = 8001.0
offset_bottom = 4501.0
scale = Vector2(0.241, 0.241)
texture = ExtResource("2_f4ng0")

[node name="Title" type="Sprite2D" parent="."]
position = Vector2(1513, 643)
scale = Vector2(0.3, 0.3)
texture = ExtResource("3_title")

[node name="PlayButton" type="TextureButton" parent="."]
offset_left = 1587.0
offset_top = 790.0
offset_right = 3671.0
offset_bottom = 2874.0
scale = Vector2(0.15, 0.15)
mouse_default_cursor_shape = 2
texture_normal = ExtResource("4_button")

[node name="QuitButton" type="TextureButton" parent="."]
offset_left = 2.0
offset_top = -1.00001
offset_right = 2086.0
offset_bottom = 2083.0
scale = Vector2(0.09, 0.09)
mouse_default_cursor_shape = 2
texture_normal = ExtResource("5_quit")

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_start")
}

[node name="start_bgm" type="AudioStreamPlayer" parent="."]
stream = ExtResource("5_bgm")
pitch_scale = 0.9

[node name="start_click_sfx" type="AudioStreamPlayer" parent="."]
stream = ExtResource("6_click")

[node name="SoundToggle" type="TextureButton" parent="."]
offset_left = 190.0
offset_top = 2.0
offset_right = 371.0
offset_bottom = 183.0
focus_mode = 0
mouse_default_cursor_shape = 2
ignore_texture_size = true
stretch_mode = 5
script = ExtResource("8_3q0wd")

[node name="click_sfx" type="AudioStreamPlayer" parent="SoundToggle"]
stream = ExtResource("6_click")
